# biRobotTeleopTask

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
include/Tasks/: biRobotTeleopTask.h
include/biRobotTeleop/: HumanRobotDataReceiver.h  HumanRobotPose.h  boost_serialization_eigen.h  boost_serialization_sch.h  boost_serialization_sva.h  motion.h  transformation.h  type.h
include/bilateralteleop/: HumanRobotPose.h
include/mc_tasks/: biRobotTeleopTask.h
src/: CMakeLists.txt
src/Tasks/: biRobotTeleopTask.cpp
src/biRobotTeleop/: HumanRobotDataReceiver.cpp  HumanRobotPose.cpp
src/mc_tasks/: biRobotTeleopTask.cpp
